# Bino_Stereo_ROS

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: BinoCamera.h
launch/: bino_stereo.launch  imu.launch  rviz_camera.launch  rviz_imu.launch
params/: extrinsics.yml  intrinsics.yml
rviz/: bino_camera.rviz  bino_imu.rviz
src/: bino_stereo.cpp
